# onnx-mlir

./: .gitmodules  CMakeLists.txt  MLIR.cmake  requirements.txt
.azure-pipelines/: Windows-CI.yml
docs/: BuildOnLinuxOSX.md  BuildOnWindows.md
src/: InitOMPasses.hpp
src/Conversion/: CMakeLists.txt
src/Conversion/ONNXToTorch/: CMakeLists.txt  ConvertONNXToTorch.cpp  ConvertONNXToTorchPipeline.cpp  EraseONNXEntryPoint.cpp  ONNXToTorchCommon.cpp  ONNXToTorchCommon.hpp  RefineFuncValueSemantics.cpp
src/Conversion/ONNXToTorch/Math/: Elementwise.cpp
src/Conversion/ONNXToTorch/Tensor/: Constant.cpp
src/Conversion/ONNXToTorch/TypeConversion/: TorchTypeConversion.cpp  TorchTypeConversion.hpp  TorchTypeConversionPasses.cpp
src/Pass/: Passes.hpp
src/Tools/onnx-mlir-opt/: onnx-mlir-opt.cpp
test/mlir/conversion/onnx_to_torch/Math/: Elementwise.mlir
test/mlir/conversion/onnx_to_torch/Tensor/: Constant.mlir
